# cellular_automata

./: .gitignore  CMakeLists.txt  README.md  autogen.sh  fizzbuzz.ipynb  make_clean_distro.sh  make_doc.sh  todo.org
configs/: current  default
demos/: CMakeLists.txt
demos/argparse/: CMakeLists.txt  demo_argparse.cpp
demos/nasch/: CMakeLists.txt
demos/nasch/pbc_with_bumps/: CMakeLists.txt  demo_nasch_pbcwb_loop_over_bumps.cpp
doc/: installation.org  installing_external_packages.org  starting_up.org
doc/starting_up/: starting_up.org
external_src/: CMakeLists.txt
external_src/argparse/: README.txt
external_src/libargparse/src/: CMakeLists.txt
kkw/non_periodic_boundary_conditions/: general.h  main.cpp
nasch/: todo.org
nasch/non_periodic_boundary_conditions/: Makefile  main  nasch_original.cpp  plot.gp
nasch/non_periodic_boundary_conditions_with_bumps/: Makefile  cc_nasch.cpp  cc_nasch.h
nasch/periodic_boundary_conditions/: cc_nasch.cpp  cc_nasch.h  cc_vehicle.cpp  cc_vehicle.h  main.cpp  plot.py  plot_density_vs_current_velocity.py  plot_multiple_break_probability.py  plot_time_vs_current.py
nasch/periodic_boundary_conditions_using_sets_instead_of_lane_vector/: Makefile  main.cpp  plot.gp
private/: CMakeLists.txt
private/julio/: CMakeLists.txt
private/julio/TASEP/: ac_lattice.cpp  ac_lattice.h
private/julio/cells/: CMakeLists.txt  ac_lattice.cpp  ac_lattice.h  cc_cell.h  cc_lattice.cpp  cc_lattice.h
private/julio/evacuation/: CMakeLists.txt  cc_floor_field.cpp  cc_floor_field.h  demo_evacuation.cpp  plot_floor_fields.py
private/julio/kkw/: CMakeLists.txt
private/julio/kkw/periodic_boundary_conditions/: CMakeLists.txt  demo_kkw_pbc.cpp
private/julio/kkw/periodic_boundary_conditions_with_bumps/: CMakeLists.txt  demo_kkw_pbcwb.cpp
private/julio/nasch/: CMakeLists.txt
private/julio/nasch/non_periodic_boundary_conditions/: CMakeLists.txt  demo_nasch_npbc.cpp
private/julio/nasch/pbc_wb_emission_profile/: CMakeLists.txt  demo_nasch_pbcwb_ep.cpp
private/julio/nasch/periodic_boundary_conditions/: CMakeLists.txt  demo_nasch_pbc.cpp  plot_multiple_break_probability.py
private/julio/nasch/periodic_boundary_conditions_with_bumps/: CMakeLists.txt  cc_nasch_pbcwb.cpp  cc_nasch_pbcwb.h  demo_nasch_pbc.cpp  demo_nasch_pbcwb.cpp  demo_nasch_pbcwb_loop_over_bumps.cpp  plot_multiple_break_probability.py  plot_one_density_vs_current_and_velocity.py
private/julio/rand_acc/: CMakeLists.txt
private/roberto/: CMakeLists.txt
private/roberto/crosswalk/: CMakeLists.txt
private/roberto/crosswalk/naive_crosswalk/: CMakeLists.txt  demo_naive_crosswalk.cpp
private/roberto/nasch/: CCNaSCHPBC_updated.cpp  CCNaSCHPBC_updated.h  CMakeLists.txt  demo_nashc_pbcwb_updated.cpp
private/roberto/nasch/non_periodic_boundary_conditions_with_bumps/: CMakeLists.txt  demo_nasch_npbcwb.cpp
private/roberto/nasch/non_periodic_boundary_conditions_with_crosswalk/: CMakeLists.txt  demo_nasch_npbcwcw.cpp
qi-lang/non_periodic_boundary_conditions/: Makefile  cc_qilang.cpp  general.h  main.cpp  plot.gp
qi-lang/non_periodic_boundary_conditions/figures_02/: readme.org
rand_acc/non_periodic_boundary_conditions/: Makefile  cc_rand_acc.cpp  cc_rand_acc.h  cc_vehicle.cpp  main.cpp
rand_acc/non_periodic_boundary_conditions/02_figures_p0e1_p1e0/: readme.org
rand_acc/non_periodic_boundary_conditions/04_figures_p0e1_p1e0.4/: readme.org~
rand_acc/non_periodic_boundary_conditions/06_figures_p0e1_p1e0.8/: readme.org~
rand_acc/non_periodic_boundary_conditions/07_figures_p0e1_p1e1/: readme.org
rand_acc/non_periodic_boundary_conditions/08_figures_p0e0.8_p1e0/: readme.org
rand_acc/non_periodic_boundary_conditions/09_figures_p0e0.8_p1e0.2/: readme.org
rand_acc/non_periodic_boundary_conditions/10_figures_p0e0.8_p1e0.4/: readme.org
rand_acc/non_periodic_boundary_conditions/11_figures_p0e0.8_p1e0.6/: readme.org
rand_acc/non_periodic_boundary_conditions/12_figures_p0e0.8_p1e0.8/: readme.org
rand_acc/non_periodic_boundary_conditions/13_figures_p0e0.6_p1e0/: readme.org
rand_acc/non_periodic_boundary_conditions/14_figures_p0e0.6_p1e0.2/: readme.org
rand_acc/non_periodic_boundary_conditions/16_figures_p0e0.6_p1e0.6/: readme.org
rand_acc/non_periodic_boundary_conditions/18_figures_p0e0.4_p1e0.2/: readme.org
rand_acc/non_periodic_boundary_conditions/20_figures_p0e0.2_p1e0/: readme.org
rand_acc/non_periodic_boundary_conditions/21_figures_p0e0.2_p1e0.2/: readme.org
rand_acc/periodic_boundary_conditions/: cc_rand_acc.cpp  cc_rand_acc.h  cc_vehicle.h  main  main.cpp  plot.gp  plot_bp_p0_0.1.py  plot_bp_p0_0.5.py  plot_bp_p0_0.6.py  plot_multiple_break_probability.py
src/: CMakeLists.txt
src/crosswalk/: CMakeLists.txt  cc_crosswalk.cpp  cc_crosswalk.h
src/general/: CMakeLists.txt  ac_agent.cpp  ac_agent.h  cc_bump.cpp  cc_bump.h  cc_bumps.h  cc_pedestrian.cpp  cc_pedestrian.h  cc_person.cpp  cc_person.h  cc_vehicle.cpp  cc_vehicle.h  cmake_definitions.h  cmake_definitions.h.in  common_includes.h  definitions.h  general.h  initialise.cpp  initialise.h  utilities.cpp  utilities.h
src/kkw/: CMakeLists.txt  cc_kkw_pbc.cpp  cc_kkw_pbc.h
src/nasch/: CMakeLists.txt  cc_nasch_npbc.cpp  cc_nasch_npbc.h  cc_nasch_pbc.cpp  cc_nasch_pbc.h
src/nasch/non_periodic_boundary_conditions/: cc_nasch.h  main.cpp  plot.gp
src/nasch/non_periodic_boundary_conditions_DELETE/: cc_nasch.cpp
src/nasch/non_periodic_boundary_conditions_with_bumps/: cc_bumps.cpp  general.h  main.cpp
src/nasch/periodic_boundary_conditions/: cc_nasch.cpp  cc_vehicle.h  main  plot.py  typescript
src/nasch/periodic_boundary_conditions_using_sets_instead_of_lane_vector/: cc_nasch.cpp  cc_nasch.h  general.h
src/rand_acc/: CMakeLists.txt  cc_rand_acc_npbc.cpp  cc_rand_acc_npbc.h  cc_rand_acc_pbc.cpp  cc_rand_acc_pbc.h  cc_rand_acc_pbcwb.cpp  cc_rand_acc_pbcwb.h
tools/: CMakeLists.txt.private_template  LNS_basic_script  clean_distro.py  doxyfile.config
tools/plot_tools/: plot_bp_p0.py  plot_multiple_break_probability.py  plot_one_bp_density_vs_current_and_velocity.py  plot_time_space.py
(+45 files in other folders)
